--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,14 @@ canvas {
   width:800px;
   height:600px;
 }
-
+#header {
+	overflow: hidden;
+  	padding: 20px 10px;
+	text-align: center;
+	background: #1abc9c;
+	color: white;
+	font-size: 20px;
+  }
 
 /* Options in index.html */
 .options
@@ -62,23 +69,59 @@ canvas {
   font-variant: small-caps;
   text-transform: none;
   }
+
   #p5sketch {
-    background: pink;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    display: inline-block;
-    float: left;
-    padding: 25px;
-    width: 50%;
+	float: left;
+	padding: 15px;
+	width: auto;
+	margin-right: 7%;
+	justify-content: center;
+	align-items: center;
+	
+
 }
 #p5sketch2 {
-    background: blue;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    display: inline-block;
     float: left;
-    padding: 25px;
+	width: auto;
+	padding: 15px;
+	margin-left: 7%;
+	justify-content: center;
+	align-items: center;
+}
+
+#container {
+    width: full;
+	margin: auto;
+}
+
+#video-container {
+	background:#f2fcfb;
+	padding: 2%;
+	/* background: #1abc9c; */
+	justify-content:center;
+	display: none;
+}
+#first {
     width: 50%;
+    float: left;
+	height: 300px;
+	text-align: center;
+}
+#second {
+    width: 50%;
+    float: left;
+	height: 300px;
+	text-align: center;
+
+}
+#clear {
+    clear: both;
+}
+
+#spot {
+	width: 40%;
+	font-size: 200%;
+	background: #1abc9c;
+	color: white;
+	padding: 10px
 }
